fix(mon-pix): hide x overflow in modulix

--- a/mon-pix/app/styles/pages/_module.scss
+++ b/mon-pix/app/styles/pages/_module.scss
@@ -11,6 +11,7 @@
   --modulix-z-index-above-all: 10;
 
   flex-grow: 1;
+  overflow-x: hidden;
   color: var(--pix-neutral-900);
   background: var(--pix-neutral-0);
 }
